frontend/src/style/home.css
/* HERO -------------------------------------------------------------- */

.hero {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 1rem;
  gap: 1rem;
}

.hero-bg {
  width: 100%;
  height: 100%;
  padding: 1rem;
  border-radius: 2rem;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: stretch;
  gap: 48px;
  background-image: url('graphics/hero-bg.png');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.hero-img {
  width: 480px;
  position: relative;
  top: 48px;
}

.hero-badge-box {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  top: -20px;
}

.hero-badge {
  background-color: #fff;
  color: var(--color-accent-bg);
  font-size: 1.5rem;
  font-weight: 600;
  width: fit-content;
}
.hero-badge.badge-1 {
  position: relative;
  left: -32px;
  top: 20px;
  transform: rotate(-12deg);
}
.hero-badge.badge-2 {
  position: relative;
  top: 60px;
  transform: rotate(12deg);
}
.hero-badge.badge-3 {
  position: relative;
  left: 32px;
  top: 20px;
  transform: rotate(-12deg);
}

/* HERO SLIDER -------------------- */

/* hero slider */
.hero-slider {
  width: 100%;
  border-radius: 2rem;
  overflow: hidden;
  height: 60vh;
  position: relative;
  background-image: url('graphics/hero-bg.png');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.slider-container {
  height: 100%;
  width: 100%;
}

.slide-container {
  display: flex;
  height: 100%;
  width: 100%;
  transition: transform 0.3s ease-in-out;
}

.hero-slide {
  flex: 0 0 100%;
  width: 100%;
}

.w-fit {
  align-self: flex-start;
}

/* hero slider content + info */
.hero-slider .content,
.hero-slider .content .info {
  display: flex;
  width: 100%;
  flex-direction: column;
  align-items: stretch;
}

.hero-slider .content {
  gap: 0.75rem;
  position: relative;
  overflow: hidden;
  padding: 1.5rem;
}

.hero-slider .content .info {
  z-index: 3;
  gap: 0px;
}
.hero-slider .content button {
  z-index: 3;
}

.carousel-img {
  width: 400px;
  position: relative;
  top: -40px;
  right: -80px;
  /* top: -400px;
  right: -120px; */
  transform: rotate(20deg);
  z-index: 2;
}

/* hero slider dots box */
.slider-dots-box {
  display: inline-flex;
  align-items: center;
  gap: 0.25rem;
  position: absolute;
  bottom: 20px;
  left: 20px;
}

/* hero slider dot */
.slider-dots-box .dot {
  width: 0.75rem;
  aspect-ratio: 1/1;
  border-radius: 900px;
  background-color: rgba(33, 33, 33, 28%);
}

/* HERO DISCOUNT SECTION */
.hero-discount-box,
.hero-discount-box .info {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: start;
}

.hero-discount-box {
  background-color: var(--color-section-high);
  border-radius: 2rem;
  overflow: hidden;
  aspect-ratio: 1/1;
}

.hero-discount-box .info {
  gap: 0.75rem;
  padding: 1.5rem;
}

/* discount code */
.hero-discount-box .info .discount-code {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  align-self: flex-start;
  border-radius: 1rem;
}
.hero-discount-box .info .discount-code .code {
  background-color: var(--color-accent-bg);
  color: var(--color-accent-on-bg);
  font-weight: 600;
  border-radius: 900px;
}
.hero-discount-box .info .discount-code .code:hover {
  background-color: #212121;
  color: #ffffff;
  cursor: pointer;
}

.hero-coupon-img {
  width: 120%;
  position: relative;
  top: -40px;
  left: -20px;
}

/* CAROUSEL --------------------------------------- */

.carousel-section {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.carousel {
  width: 100%;
  overflow: hidden;
  position: relative;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 1.5rem;
}

.carousel-slide-container {
  display: flex;
  width: 100%;
  transition: transform 0.3s ease-in-out;
}

.carousel-slide {
  flex: 0 0 100%;
}

.carousel-card-container {
  display: flex;
  justify-content: center;
}

.carousel-card {
  max-width: 80%;
}

/* carousel actions box */

.carousel-actions-box {
  width: 80%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

/* carousel dots */

.carousel-dots-box {
  display: inline-flex;
  align-items: center;
  gap: 0.25rem;
}

.carousel-dots-box .dot {
  width: 0.75rem;
  aspect-ratio: 1/1;
  border-radius: 900px;
  background-color: rgba(33, 33, 33, 28%);
}

/* carousel arrows (mobile) */
.carousel-arrow {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0.5rem;
  background-color: #212121;
  border-radius: 0.5rem;
  color: #ffffff;
}

.dot.active {
  background-color: var(--color-text);
}

.carousel-slider-container {
  max-width: 100%;
}

/* HEADER --------------------------- */

.header-btn-container {
  display: flex;
}

.header-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 48px;
  aspect-ratio: 1/1;
  padding: 0px;
  border-radius: 900px;
  background-color: transparent;
  position: relative;
}

.header-btn.active {
  background-color: var(--color-sec-bg);
  color: var(--color-sec-on-bg);
}

.header-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: stretch;
  gap: 0.5rem;
  margin-top: 1rem;
  min-height: 24vh;
}

header {
  width: 92%;
  margin: 0 auto;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  gap: 1rem;
  padding-inline: 1rem;
  padding-block: 0.5rem;
  align-items: center;
  border-radius: 0.75rem;
  background-color: #ffffff;
  border: 1px solid rgba(33, 33, 33, 8%);
}

header .logo-box {
  order: 1;
  width: 100%;
  text-align: center;
}

header .menu-box {
  order: 2;
  width: 44%;
  display: flex;
}

header .icons-box {
  order: 3;
  width: 44%;
  display: flex;
  justify-content: end;
  padding-inline: 0.5rem;
}

header .cart-icon-total {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  background-color: var(--color-accent-bg);
  color: var(--color-accent-on-bg);
  font-weight: 500;
  border-radius: 900px;
  /* padding: 0.25rem; */
  height: 1.5rem;
  aspect-ratio: 1/1;
  line-height: 100%;
  position: absolute;
  top: 0;
  right: 0;
}

.cart-icon-total.hidden {
  display: none;
}

.coupon-box {
  width: 92%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-inline: 1rem;
  padding-block: 0.25rem;
  align-items: center;
  border-radius: 0.5rem;
  background-color: #212121;
}
.coupon-box p {
  color: #ffffff;
  font-weight: 600;
}

.logo {
  color: var(--color-accent-bg);
  text-transform: uppercase;
  font-weight: 900;
  font-size: 1.5rem;
}
.coupon {
  background-color: var(--color-sec-bg);
  color: var(--color-sec-on-bg);
  border-radius: 0.25rem;
  padding-inline: 0.75rem;
  padding-inline: 0.25rem;
  font-weight: 700;
}

.nav-item {
  padding-inline: 1rem;
  padding-block: 0.5rem;
  border-radius: 900px;
  font-size: 1.25rem;
  font-weight: 500;
  color: var(--color-text);
}
.nav-item.active {
  color: var(--color-sec-on-bg);
  background-color: var(--color-sec-bg);
}

.hero-text {
  font-size: 3rem;
  font-weight: 700;
  max-width: 40%;
}

/* smartphone landscape / mini tablet ----------------------------- */
@media (min-width: 576px) {
  .header-container {
    min-height: 16vh;
  }

  header {
    flex-direction: row;
    justify-content: space-between;
  }

  .hero-bg {
    padding: 2rem;
  }

  .hero-img {
    width: 600px;
    position: relative;
    top: 48px;
  }

  .hero-slider {
    height: 40vh;
  }

  .hero-slider .content {
    padding: 1.75rem;
  }
  .carousel-img {
    top: -120px;
    right: -160px;
    width: 520px;
  }
  .slider-dots-box {
    bottom: 28px;
    left: 28px;
  }
  .hero-discount-box {
    aspect-ratio: 16/9;
  }
  .hero-coupon-img {
    max-width: 80%;
    left: 200px;
    top: -100px;
  }
  .carousel-section {
    max-width: 60%;
    margin: 0 auto;
  }
}

/* tablet portrait ---------------------------------------------- */
@media (min-width: 768px) {
  .header-container {
    min-height: 12vh;
  }

  header .menu-box {
    order: 1;
    width: 20%;
  }

  header .logo-box {
    order: 2;
    width: 52%;
  }

  header .icons-box {
    order: 3;
    width: 20%;
  }

  .hero-img {
    width: 720px;
    position: relative;
    top: 48px;
    right: -80px;
  }

  .hero-badge {
    font-size: 2rem;
    font-weight: 600;
    width: fit-content;
  }
  .hero-badge.badge-1 {
    left: -120px;
  }
  .hero-badge.badge-2 {
    left: -80px;
    transform: rotate(-20deg);
  }

  .hero-slider {
    height: 40vh;
  }

  .hero-badge.badge-3 {
    left: -40px;
    top: 32px;
    transform: rotate(20deg);
  }

  .carousel-img {
    top: -200px;
    right: -240px;
    width: 480px;
  }
  .hero-discount-box {
    aspect-ratio: 21/9;
    width: 100%;
  }
  .hero-coupon-img {
    top: -180px;
    left: 280px;
  }
  .carousel-section {
    max-width: 100%;
  }
  .carousel-slide-container {
    max-width: 80%;
    margin: 0 auto;
  }
  .carousel-slide {
    flex: 0 0 50%;
  }
}

/* tablet landscape / laptop -------------------------------------- */
@media (min-width: 992px) {
  .header-container {
    position: sticky;
    top: 1rem;
    z-index: 10;
  }

  header {
    max-width: 96%;
  }

  .hero {
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
  }

  .hero-bg {
    padding: 3rem;
    gap: 0px;
    /* height: 60vh; */
  }

  .hero-slider {
    height: 40vh;
  }

  .hero-badge-img-box {
    display: flex;
    justify-content: space-between;
    align-items: center;
    order: 2;
  }

  .hero-badge.badge-1 {
    left: 0px;
    top: -60px;
    transform: rotate(20deg);
  }

  .hero-badge.badge-3 {
    left: -12px;
    top: -32px;
    transform: rotate(-8deg);
  }

  .hero-img {
    width: 700px;
    position: relative;
    top: 0px;
    right: 0px;
  }

  .hero-title-box {
    order: 1;
    max-width: 60%;
  }

  /* .hero-slider {
    height: 100%;
  } */
  .hero-discount-box {
    height: 40vh;
    min-width: 36%;
  }
  .hero-coupon-img {
    max-width: 100%;
    position: relative;
    top: -60px;
    left: 20px;
  }
  .carousel-slide-container {
    max-width: 80%;
    margin: 0 auto;
  }

  .display-title {
    font-size: 5rem;
    font-weight: 900;
    color: #d97161;
  }
}

/* desktop -------------------------------------------- */
@media (min-width: 1280px) {
  .header-container {
    min-height: 16vh;
  }

  .hero-bg {
    gap: 0px;
    height: 52vh;
  }

  .hero-img {
    width: 800px;
    position: relative;
    top: -80px;
    right: -120px;
  }

  .hero-badge.badge-3 {
    left: 60px;
    top: -120px;
    transform: rotate(-8deg);
  }

  .hero-badge.badge-2 {
    left: 40px;
    top: -28px;
  }

  .hero-badge.badge-1 {
    top: -80px;
  }

  .carousel-img {
    top: -200px;
    right: -280px;
    width: 440px;
  }
  .carousel-slide {
    flex: 0 0 33.333%;
  }
}

